# canary-scan

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docker-build.yml  docs.yml  project-tests.yml  publish.yml
command/report/: index.html
command/scan/: index.html
command/stage/: index.html
docs/: mkdocs.yml  pyproject.toml
docs/docs/: file-types.md  index.md  install.md  license.md  project.md  workflow.md
docs/docs/command/: deps.md  report.md  scan.md  stage.md
file-types/: index.html
install/: index.html
license/: index.html
project/: index.html
scripts/: dependency-package-resolver.py  uv-exec
search/: search_index.json
src/canary_scan/: __init__.py  main.py
src/canary_scan/bundled/: README.md  VERSIONS.txt  __init__.py  fetch.sh  pdf_parser.py  pdfid.py  rtfdump.py
src/canary_scan/commands/: __init__.py  deps.py  report.py  scan.py  stage.py
src/canary_scan/lib/: config.py  deps.py  filters.py  guide.py  io.py  models.py  orchestrator.py  runners.py  safety.py  state.py  type_detect.py
src/canary_scan/scanners/: __init__.py  embedded.py  inventory.py  metadata.py  remote_refs.py  stego.py  uniqueness.py
tests/: conftest.py  generate_fixtures.py  test_deps.py  test_filters.py  test_improvements.py  test_inventory.py  test_io.py  test_low_priority_techniques.py  test_missing_techniques.py  test_pipeline.py  test_remote_refs.py  test_report.py  test_safety.py  test_state.py  test_structures.py  test_type_detect.py
workflow/: index.html
